2004-07-08  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtk_tut.xml: libglademm chapter: Mention memory 
	management.

2004-07-08  Murray Cumming  <murrayc@murrayc.com>

	* Patch from Christer Palm in bug #145594, to change ActionGroup and 
	EntryCompletion constructors from private to protected. Lets hope 
	there are no more of these, because this is technically API change in 
	the stable branch. However, the methods already exist and are  tested 
	by the create() methods, and are simple and generated, and therefore 
	unlikely to have errors. Also, this change will only be useful to a 
	very small number of people, so it does not confuse the API versions.

2004-07-04  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm_tut.xml: Tell people to pkg-config for 2.4 
	instead of 2.0.

2004-07-02  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/uimanager.hg: Made constructor protected, like in the 
	previous change.
	* gtk/src/treesortable.hg: Added docs explaining the return values 
	for the sort func.

2.4.4:

2004-07-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/action.hg, toggleaction.hg, radioaction.hg, icontheme.hg:
	Added protected keyword at start of class so that 
	the constructors can be used by derived classes. This is addition of 
	API in the stable branch, but it should not affect many people and it 
	is a little too embarassing to leave as it is.

2004-06-30  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/container.hg: Add code to the GClass init() function to null 
	the remove callback if the type is actually GtkContainer rather than 
	a derived class. The default implementation in GtkContainer complains 
	about it not being implemented, but that is useless and annoying to us 
	when deriving directly from Gtk::Container.

2004-06-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* gtk/src/stockitem.ccg (StockItem::StockItem): Pass a 0 pointer
	to GTK+ if translation_domain is the empty string, so that the