@@ -347,6 +347,7 @@ AC_CONFIG_FILES([
         examples/book/treeview/list/Makefile
         examples/book/treeview/tree/Makefile
         examples/book/treeview/drag_and_drop/Makefile
+        examples/book/treeview/popup/Makefile
     examples/calendar/Makefile
     examples/cellrenderercustom/Makefile
     examples/dnd/Makefile
