@@ -1,2 +1,2 @@
-SUBDIRS = editable_cells list tree drag_and_drop
+SUBDIRS = editable_cells list tree drag_and_drop popup
 
