@@ -23,7 +23,9 @@ public:
     virtual ~ExampleWindow();
 
 protected:
-     MyButton* m_button;
+    virtual void on_button_clicked();
+
+    MyButton* m_button;
 };
 
 ExampleWindow::ExampleWindow()
@@ -32,6 +34,9 @@ ExampleWindow::ExampleWindow()
 
     m_button = manage(new MyButton);
     add(*m_button);
+
+    sigc::connection con = m_button->signal_clicked().connect( sigc::mem_fun(*this, &ExampleWindow::on_button_clicked) ); 
+    con.disconnect();
 	
     show_all_children();
 }
@@ -39,6 +44,11 @@ ExampleWindow::ExampleWindow()
 ExampleWindow::~ExampleWindow()
 {
   g_warning("ExampleWindow::~ExampleWindow()");
+}
+
+void ExampleWindow::on_button_clicked()
+{
+  g_warning("Button clicked.");
 }
 
 int main(int argc, char* argv[])
