@@ -1,3 +1,8 @@
+2004-07-15  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/treeview/: Added popup example, which was already in 
+	gtkmm 2.0/2.2.
+
 2004-07-08  Murray Cumming  <murrayc@murrayc.com>
 
 	* docs/tutorial/gtk_tut.xml: libglademm chapter: Mention memory 
